test/compile_errors/lib/visibility/transitive_mid.w
use visibility.private_surface

pub fn mid_value -> i32:
    0
